--- a/act.html
+++ b/act.html
@@ -10,7 +10,7 @@
 <body>
     <div class="button-container1">
         <div class="column1">
-            <button class="center-button1">1</button>
+            <a href="actsample1.html"><button class="center-button1">1</button></a>
             <button class="center-button1">2</button>
             <button class="center-button1">3</button>
             <button class="center-button1">4</button>
