--- a/dance.html
+++ b/dance.html
@@ -10,9 +10,9 @@
 <body>
     <div class="button-container1">
         <div class="column1">
-            <button class="center-button1">1</button>
-            <button class="center-button1">2</button>
-            <button class="center-button1">3</button>
+            <a href="dancesample1.html"><button class="center-button1">1</button></a>
+            <a href="dancesample2.html"><button class="center-button1">2</button></a>
+            <a href="dancesample3.html"><button class="center-button1">3</button></a>
             <button class="center-button1">4</button>
             <button class="center-button1">5</button>
         </div>
