done dance category

--- a/dance.html
+++ b/dance.html
@@ -10,18 +10,18 @@
 <body>
     <div class="button-container1">
         <div class="column1">
-            <a href="dancesample1.html"><button class="center-button1">1</button></a>
-            <a href="dancesample2.html"><button class="center-button1">2</button></a>
-            <a href="dancesample3.html"><button class="center-button1">3</button></a>
-            <button class="center-button1">4</button>
-            <button class="center-button1">5</button>
+            <a href="dance/dancesample1.html"><button class="center-button1">01</button></a>
+            <a href="dance/dancesample2.html"><button class="center-button1">02</button></a>
+            <a href="dance/dancesample3.html"><button class="center-button1">03</button></a>
+            <a href="dance/dancesample4.html"><button class="center-button1">04</button></a>
+            <a href="dance/dancesample5.html"><button class="center-button1">05</button></a>
         </div>
         <div class="column1">
-            <button class="center-button1">6</button>
-            <button class="center-button1">7</button>
-            <button class="center-button1">8</button>
-            <button class="center-button1">9</button>
-            <button class="center-button1">10</button>
+            <a href="dance/dancesample6.html"><button class="center-button1">06</button></a>
+            <a href="dance/dancesample7.html"><button class="center-button1">07</button></a>
+            <a href="dance/dancesample8.html"><button class="center-button1">08</button></a>
+            <a href="dance/dancesample9.html"><button class="center-button1">09</button></a>
+            <a href="dance/dancesample10.html"><button class="center-button1">10</button></a>
         </div>
     </div>
 </body>
