--- a/dance/dancesample1.html
+++ b/dance/dancesample1.html
@@ -14,7 +14,7 @@
     <div class="container">
         <h1>FDP Got Dancers: TALA by Sarah Geronimo</h1>
         <iframe
-            src="https://player.vimeo.com/video/980090367?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            src="https://player.vimeo.com/video/980090367?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;quality=540p"
             width="750" height="480" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
             title="Tala_Edited"></iframe>
     </div>
