--- a/dance/dancesample4.html
+++ b/dance/dancesample4.html
@@ -12,11 +12,11 @@
 <body>
 
     <div class="container">
-        <h1>FDP Got Dancers: Sayaw Kikay by Viva Hotbabes</h1>
+        <h1>FDP Got Dancers: Pantropiko by BINI</h1>
         <iframe
-            src="https://player.vimeo.com/video/980100403?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            src="https://player.vimeo.com/video/980105479?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;quality=540p"
             width="800" height="480" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
-            title="Sayaw Kikay Edited"></iframe>
+            title="Pantropiko Edited"></iframe>
     </div>
 
 </body>
