--- a/dance/dancesample9.html
+++ b/dance/dancesample9.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FDP Got Talent</title>
 
-    <link rel="stylesheet" href="actsample1.css">
+    <link rel="stylesheet" href="dancesample1.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <h1>FDP Got Dancers: Fetty Wap by Trap Queen</h1>
         <iframe
             src="https://player.vimeo.com/video/980138949?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;quality=540p"
-            width="800" height="480" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+            width="1150" height="700" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
             title="Fetty Wap"></iframe>
     </div>
 
