update sing category

--- a/sing.html
+++ b/sing.html
@@ -10,17 +10,17 @@
 <body>
     <div class="button-container1">
         <div class="column1">
-            <a href="singsample1.html"><button class="center-button1">1</button></a>
-            <button class="center-button1">2</button>
-            <button class="center-button1">3</button>
-            <button class="center-button1">4</button>
-            <button class="center-button1">5</button>
+            <a href="sing/singsample1.html"><button class="center-button1">01</button></a>
+            <a href="sing/singsample2.html"><button class="center-button1">02</button></a>
+            <a href="sing/singsample3.html"><button class="center-button1">03</button></a>
+            <button class="center-button1">04</button>
+            <button class="center-button1">05</button>
         </div>
         <div class="column1">
-            <button class="center-button1">6</button>
-            <button class="center-button1">7</button>
-            <button class="center-button1">8</button>
-            <button class="center-button1">9</button>
+            <button class="center-button1">06</button>
+            <button class="center-button1">07</button>
+            <button class="center-button1">08</button>
+            <button class="center-button1">09</button>
             <button class="center-button1">10</button>
         </div>
     </div>
