--- a/sing.html
+++ b/sing.html
@@ -13,15 +13,15 @@
             <a href="sing/singsample1.html"><button class="center-button1">01</button></a>
             <a href="sing/singsample2.html"><button class="center-button1">02</button></a>
             <a href="sing/singsample3.html"><button class="center-button1">03</button></a>
-            <button class="center-button1">04</button>
-            <button class="center-button1">05</button>
+            <a href="sing/singsample4.html"><button class="center-button1">04</button></a>
+            <a href="sing/singsample5.html"><button class="center-button1">05</button></a>
         </div>
         <div class="column1">
-            <button class="center-button1">06</button>
-            <button class="center-button1">07</button>
-            <button class="center-button1">08</button>
-            <button class="center-button1">09</button>
-            <button class="center-button1">10</button>
+            <a href="sing/singsample6.html"><button class="center-button1">06</button></a>
+            <a href="sing/singsample7.html"><button class="center-button1">07</button></a>
+            <a href="sing/singsample8.html"><button class="center-button1">08</button></a>
+            <a href="sing/singsample9.html"><button class="center-button1">09</button></a>
+            <a href="sing/singsample10.html"><button class="center-button1">10</button></a>
         </div>
     </div>
 </body>
