--- a/dance/dancesample10.html
+++ b/dance/dancesample10.html
@@ -14,9 +14,9 @@
     <div class="container">
         <h1>FDP Got Dancers: Sumayaw Ka by Gloc 9</h1>
         <iframe
-            src="https://player.vimeo.com/video/980144223?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;quality=540p"
-            width="1150" height="700" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
-            title="Sumayaw Ka Edited"></iframe>
+            src="https://player.vimeo.com/video/988080362?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+            title="Sumayaw Ka"></iframe>
     </div>
 
 </body>
