--- a/dance/dancesample2.html
+++ b/dance/dancesample2.html
@@ -14,9 +14,9 @@
     <div class="container">
         <h1>FDP Got Dancers: Bongga Ka Day by Hotdog</h1>
         <iframe
-            src="https://player.vimeo.com/video/980095672?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;quality=540p"
-            width="1150" height="700" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
-            title="Bongga Ka Day Edited"></iframe>
+            src="https://player.vimeo.com/video/988078890?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            width="1278" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+            title="Bongga Ka Day"></iframe>
     </div>
 
 </body>
