--- a/dance/dancesample4.html
+++ b/dance/dancesample4.html
@@ -14,9 +14,9 @@
     <div class="container">
         <h1>FDP Got Dancers: Pantropiko by BINI</h1>
         <iframe
-            src="https://player.vimeo.com/video/980105479?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;quality=540p"
-            width="1150" height="700" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
-            title="Pantropiko Edited"></iframe>
+            src="https://player.vimeo.com/video/988079535?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+            title="Pantropiko(1)"></iframe>
     </div>
 
 </body>
