--- a/dance/dancesample8.html
+++ b/dance/dancesample8.html
@@ -14,8 +14,8 @@
     <div class="container">
         <h1>FDP Got Dancers: Material Girl by Brenda Bayla</h1>
         <iframe
-            src="https://player.vimeo.com/video/980135759?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;quality=540p"
-            width="1150" height="700" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+            src="https://player.vimeo.com/video/988079160?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
             title="Material Girl"></iframe>
     </div>
 
