--- a/dance/dancesample9.html
+++ b/dance/dancesample9.html
@@ -14,8 +14,8 @@
     <div class="container">
         <h1>FDP Got Dancers: Fetty Wap by Trap Queen</h1>
         <iframe
-            src="https://player.vimeo.com/video/980138949?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;quality=540p"
-            width="1150" height="700" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
+            src="https://player.vimeo.com/video/988078976?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            width="1280" height="720" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write"
             title="Fetty Wap"></iframe>
     </div>
 
